--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@eslint/js": "^9.38.0",
     "eslint": "^9.38.0",
+    "eslint-plugin-import": "^2.32.0",
     "globals": "^16.4.0",
     "jsdom": "^27.0.1",
     "rollup": "^4.52.5",
