--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "betal-fe",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "type": "module",
   "main": "dist/betal-fe.js",
   "files": [
@@ -20,6 +20,8 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.38.0",
+    "@rollup/plugin-commonjs": "^29.0.0",
+    "@rollup/plugin-node-resolve": "^16.0.3",
     "eslint": "^9.38.0",
     "eslint-plugin-import": "^2.32.0",
     "globals": "^16.4.0",
@@ -28,5 +30,8 @@
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-filesize": "^10.0.0",
     "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "fast-deep-equal": "^3.1.3"
   }
 }
